adds db test and update initial configuration